--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB clone</title>
-	</head>
-    <body style="margin:0px;padding:0px;">
-		<header style="background-color:#FF0000;height:70px;width:100%;">
-		</header>
+    <head>
+        <meta charset="utf-8">
+        <title>AirBnB Clone</title>
+    </head>
+    <body
+    style="margin:0 0 0 0;
+        padding:0 0 0 0;">
 
-		<footer style="position:fixed;bottom:0;background-color:#00FF00;height:60px;width:100%;text-align:center;line-height:30px;">
-			<p>Holberton School</p>
-		</footer>
-	</body>
+        <!--HEADER-->
+        <header
+        style="background-color:#FF0000;
+            height:70px;
+            width:100%;">
+        </header>
+
+        <!--FOOTER-->
+        <footer
+        style="background-color:#00FF00;
+            color:black;
+            height:60px;
+            width:100%;
+            position:absolute;
+            bottom:0;
+            z-index:1;
+            text-align:center;
+            line-height:60px;">Best School</footer>
+    </body>
 </html>
