--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,21 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB clone</title>
-		<style>
+    <head>
+        <meta charset="utf-8">
+        <title>AirBnB Clone</title>
 
-			body {margin:0px;padding:0px;}
-			header {background-color:#FF0000;height:70px;width:100%;}
-			footer {position:fixed;bottom:0;background-color:#00FF00;height:60px;width:100%;text-align:center;line-height:30px;}
+        <!--Styling-->
+        <style>
+            body {
+                margin:0 0 0 0;
+                padding:0 0 0 0;
+            }
 
-		</style>
-	</head>
+            header {
+                background-color:#FF0000;
+                height:70px;
+                width:100%;
+            }
+
+            footer {
+                background-color:#00FF00;
+                color:black;
+                height:60px;
+                width:100%;
+                position:absolute;
+                bottom:0;
+                z-index:1;
+                text-align:center;
+                line-height:60px;
+            }
+        </style>
+    </head>
+
+    <!--Body-->
     <body>
-		<header>
-		</header>
 
-		<footer>
-			<p>Holberton School</p>
-		</footer>
-	</body>
+        <!--HEADER-->
+        <header></header>
+
+        <!--FOOTER-->
+        <footer>Best School</footer>
+    </body>
 </html>
