--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB clone</title>
+    <head>
+        <meta charset="utf-8">
+        <title>AirBnB Clone</title>
 
-		<link rel="stylesheet" href="styles/2-common.css"/>
-		<link rel="stylesheet" href="styles/2-header.css"/>
-		<link rel="stylesheet" href="styles/2-footer.css"/>
-	</head>
+        <!--STYLING-->
+        <link rel="stylesheet" href="styles/2-common.css">
+        <link rel="stylesheet" href="styles/2-header.css">
+        <link rel="stylesheet" href="styles/2-footer.css">
+    </head>
+
+    <!--Body-->
     <body>
-		<header>
-		</header>
 
-		<footer>
-			<p>Holberton School</p>
-		</footer>
-	</body>
+        <!--HEADER-->
+        <header></header>
+
+        <!--FOOTER-->
+        <footer>Best School</footer>
+    </body>
 </html>
