--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB clone</title>
+    <head>
+        <meta charset="utf-8">
+        <title>AirBnB Clone</title>
 
-		<link rel="shortcut icon" href="images/icon.ico" >
+        <!--Favicon-->
+        <link rel="icon" type="image/png" href="images/icon.png">
 
-		<link rel="stylesheet" href="styles/3-common.css"/>
-		<link rel="stylesheet" href="styles/3-header.css"/>
-		<link rel="stylesheet" href="styles/3-footer.css"/>
-	</head>
+        <!--STYLING-->
+        <link rel="stylesheet" href="styles/3-common.css">
+        <link rel="stylesheet" href="styles/3-header.css">
+        <link rel="stylesheet" href="styles/3-footer.css">
+    </head>
+
+    <!--Body-->
     <body>
-		<header>
-			<div id="header_logo"></div>
-		</header>
-
-		<footer>
-			<p>Holberton School</p>
-		</footer>
-	</body>
+        <!--HEADER-->
+        <header>
+            <div class="header_logo"></div>
+        </header>
+        <!--FOOTER-->
+        <footer>
+            <p>Best School</p>
+        </footer>
+    </body>
 </html>
