--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB clone</title>
+    <head>
+        <meta charset="utf-8">
+        <title>AirBnB Clone</title>
 
-		<link rel="shortcut icon" href="images/icon.ico" >
+        <!--Favicon-->
+        <link rel="icon" type="image/png" href="images/icon.png">
 
-		<link rel="stylesheet" href="styles/4-common.css"/>
-		<link rel="stylesheet" href="styles/3-header.css"/>
-		<link rel="stylesheet" href="styles/3-footer.css"/>
-		<link rel="stylesheet" href="styles/4-filters.css"/>
-	</head>
+        <!--STYLING-->
+        <link rel="stylesheet" href="styles/4-common.css">
+        <link rel="stylesheet" href="styles/3-header.css">
+        <link rel="stylesheet" href="styles/3-footer.css">
+        <link rel="stylesheet" href="styles/4-filters.css">
+    </head>
+
+    <!--Body-->
     <body>
-		<header>
-			<div id="header_logo"></div>
-		</header>
-		<div class="container">
-			<section class="filters">
-				<button>Search</button>
-			</section>
-		</div>
-		<footer>
-			<p>Holberton School</p>
-		</footer>
-	</body>
+        <!--HEADER-->
+        <header>
+            <div class="header_logo"></div>
+        </header>
+
+        <!--CONTAINER-->
+        <div class="container">
+            <section class="filters">
+                <div class="btn">
+                    <button>Search</button>
+                </div>
+            </section>
+        </div>
+
+        <!--FOOTER-->
+        <footer>
+            <p>Best School</p>
+        </footer>
+    </body>
 </html>
