--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,35 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB clone</title>
+    <head>
+        <meta charset="utf-8">
+        <title>AirBnB Clone</title>
 
-		<link rel="shortcut icon" href="images/icon.ico" >
+        <!--Favicon-->
+        <link rel="icon" type="image/png" href="images/icon.png">
 
-		<link rel="stylesheet" href="styles/4-common.css"/>
-		<link rel="stylesheet" href="styles/3-header.css"/>
-		<link rel="stylesheet" href="styles/3-footer.css"/>
-		<link rel="stylesheet" href="styles/5-filters.css"/>
-	</head>
+        <!--STYLING-->
+        <link rel="stylesheet" href="styles/4-common.css">
+        <link rel="stylesheet" href="styles/3-header.css">
+        <link rel="stylesheet" href="styles/3-footer.css">
+        <link rel="stylesheet" href="styles/5-filters.css">
+    </head>
+
+    <!--Body-->
     <body>
-		<header>
-			<div id="header_logo"></div>
-		</header>
-		<div class="container">
-			<section class="filters">
-				<button>Search</button>
-				<div class="locations">
-					<h3>States</h3>
-					<h4>California, Arizona...</h4>
-				</div>
-				<div class="amenities">
-					<h3>Amenities</h3>
-					<h4>Internet, Kitchen...</h4>
-				</div>
+        <!--HEADER-->
+        <header>
+            <div class="header_logo"></div>
+        </header>
 
-			</section>
-		</div>
-		<footer>
-			<p>Holberton School</p>
-		</footer>
-	</body>
+        <!--CONTAINER-->
+        <div class="container">
+            <section class="filters">
+                <!--LOCATIONS-->
+                <div class="locations">
+                    <h3>States</h3>
+                    <h4>California, Arizona...</h4>
+                </div>
+
+                <!--AMENITIES-->
+                <div class="amenities">
+                    <h3>Amenities</h3>
+                    <h4>Internet, Kitchen...</h4>
+                </div>
+
+                <!--BUTTON-->
+                <button>Search</button>
+            </section>
+        </div>
+
+        <!--FOOTER-->
+        <footer>
+            <p>Best School</p>
+        </footer>
+    </body>
 </html>
