--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -1,53 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB clone</title>
+    <head>
+        <meta charset="utf-8">
+        <title>AirBnB Clone</title>
 
-		<link rel="shortcut icon" href="images/icon.ico" >
+        <!--Favicon-->
+        <link rel="icon" type="image/png" href="images/icon.png">
 
-		<link rel="stylesheet" href="styles/4-common.css"/>
-		<link rel="stylesheet" href="styles/3-header.css"/>
-		<link rel="stylesheet" href="styles/3-footer.css"/>
-		<link rel="stylesheet" href="styles/6-filters.css"/>
-	</head>
+        <!--STYLING-->
+        <link rel="stylesheet" href="styles/4-common.css">
+        <link rel="stylesheet" href="styles/3-header.css">
+        <link rel="stylesheet" href="styles/3-footer.css">
+        <link rel="stylesheet" href="styles/6-filters.css">
+    </head>
+
+    <!--Body-->
     <body>
-		<header>
-			<div id="header_logo"></div>
-		</header>
-		<div class="container">
-			<section class="filters">
-				<button>Search</button>
-				<div class="locations">
-					<h3>States</h3>
-					<h4>California, Arizona...</h4>
-					<ul class="popover">
-						<li><h2>Arizona</h2>
-							<ul>
-								<li><h4>Page</h4></li>
-								<li><h4>Page2</h4></li>
-							</ul></li>
-						<li><h2>California</h2>
-							<ul>
-								<li><h4>San Francisco</h4></li>
-								<li><h4>Los Altos</h4></li>
-							</ul></li>
-					</ul>
-				</div>
-				<div class="amenities">
-					<h3>Amenities</h3>
-					<h4>Internet, Kitchen...</h4>
-					<ul class="popover">
-						<li><h4>Internet</h4></li>
-						<li><h4>TV</h4></li>
-						<li><h4>Kitchen</h4></li>
-						<li><h4>Iron</h4></li>
-					</ul>
-				</div>
+        <!--HEADER-->
+        <header>
+            <div class="header_logo"></div>
+        </header>
 
-			</section>
-		</div>
-		<footer>
-			<p>Holberton School</p>
-		</footer>
-	</body>
+        <!--CONTAINER-->
+        <div class="container">
+            <section class="filters">
+                <!--LOCATIONS-->
+                <div class="locations">
+                    <h3>States</h3>
+                    <h4>California, Arizona...</h4>
+
+                    <ul class="popover">
+                        <li class="state">
+                            <h2>Arizona:</h2>
+                                <ul>
+                                    <li>Page</li>
+                                    <li>Page2</li>
+                                </ul>
+                        </li>
+
+                        <li class="state">
+                            <h2>California:</h2>
+                            <ul>
+                                <li>San Francisco</li>
+                                <li>Los Angeles</li>
+                            </ul>
+                        </li>
+
+                        <li class="state">
+                            <h2>Enugu:</h2>
+                            <ul>
+                                <li>Abakpa</li>
+                                <li>Emene</li>
+                                <li>Obiagu</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+
+                <!--AMENITIES-->
+                <div class="amenities">
+                    <h3>Amenities</h3>
+                    <h4>Internet, Kitchen...</h4>
+
+                    <ul class="popover">
+                        <li>Internet</li>
+                        <li>TV</li>
+                        <li>Kitchen</li>
+                        <li>Iron</li>
+                        <li>Pool</li>
+                        <li>Hair Dryer</li>
+                    </ul>
+                </div>
+
+                <!--BUTTON-->
+                <button>Search</button>
+            </section>
+        </div>
+
+        <!--FOOTER-->
+        <footer>
+            <p>Best School</p>
+        </footer>
+    </body>
 </html>
