--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,129 +1,222 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB clone</title>
+    <head>
+        <meta charset="utf-8">
+        <title>AirBnB Clone</title>
 
-		<link rel="shortcut icon" href="images/icon.ico" >
+        <!--Favicon-->
+        <link rel="icon" type="image/png" href="images/icon.png">
 
-		<link rel="stylesheet" href="styles/4-common.css"/>
-		<link rel="stylesheet" href="styles/3-header.css"/>
-		<link rel="stylesheet" href="styles/3-footer.css"/>
-		<link rel="stylesheet" href="styles/6-filters.css"/>
-		<link rel="stylesheet" href="styles/8-places.css"/>
-	</head>
+        <!--STYLING-->
+        <link rel="stylesheet" href="styles/4-common.css">
+        <link rel="stylesheet" href="styles/3-header.css">
+        <link rel="stylesheet" href="styles/3-footer.css">
+        <link rel="stylesheet" href="styles/6-filters.css">
+        <link rel="stylesheet" href="styles/8-places.css">
+    </head>
+
+    <!--Body-->
     <body>
-		<header>
-			<div id="header_logo"></div>
-		</header>
-		<div class="container">
-			<section class="filters">
-				<button>Search</button>
-				<div class="locations">
-					<h3>States</h3>
-					<h4>California, Arizona...</h4>
-					<ul class="popover">
-						<li><h2>Arizona</h2>
-							<ul>
-								<li><h4>Page</h4></li>
-								<li><h4>Page2</h4></li>
-							</ul></li>
-						<li><h2>California</h2>
-							<ul>
-								<li><h4>San Francisco</h4></li>
-								<li><h4>Los Altos</h4></li>
-							</ul></li>
-					</ul>
-				</div>
-				<div class="amenities">
-					<h3>Amenities</h3>
-					<h4>Internet, Kitchen...</h4>
-					<ul class="popover">
-						<li><h4>Internet</h4></li>
-						<li><h4>TV</h4></li>
-						<li><h4>Kitchen</h4></li>
-						<li><h4>Iron</h4></li>
-					</ul>
-				</div>
+        <!--HEADER-->
+        <header>
+            <div class="header_logo"></div>
+        </header>
 
-			</section>
-			<section class="places">
-				<h1>Places</h1>
-				<article>
-					<div class="headline">
-						<h2>My home</h2>
-						<div class="price_by_night">$80</div>
-					</div>
-					<div class="information">
-						<div class="max_guest">
-							<div class="guest_icon"></div>
-							<p>2 Guests</p>
-						</div>
-						<div class="number_rooms">
-							<div class="bed_icon"></div>
-							<p>1 Bedroom</p>
-						</div>
-						 <div class="number_bathrooms">
-							<div class="bath_icon"></div>
-							<p>1 Bathroom</p>
-						</div>
-					</div>
-					<div class="user"><b>Owner</b>: John Lennon</div>
-					<div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    </div>
-				</article>
-				<article>
-					<div class="headline">
-						<h2>Tiny house</h2>
-						<div class="price_by_night">$65</div>
-					</div>
-					<div class="information">
-                        <div class="max_guest">
-                            <div class="guest_icon"></div>
-                            <p>4 Guests</p>
-                        </div>
-                        <div class="number_rooms">
-                            <div class="bed_icon"></div>
-                            <p>2 Bedroom</p>
-                        </div>
-                         <div class="number_bathrooms">
-                            <div class="bath_icon"></div>
-                            <p>1 Bathroom</p>
-                        </div>
-                    </div>
-					<div class="user"><b>Owner</b>: Adrienne</div>
-					<div class="description">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </div>
-				</article>
-				<article>
-					<div class="headline">
-						<h2>A suite</h2>
-						<div class="price_by_night">$180</div>
-					</div>
-					<div class="information">
-                        <div class="max_guest">
-                            <div class="guest_icon"></div>
-                            <p>5 Guests</p>
-                        </div>
-                        <div class="number_rooms">
-                            <div class="bed_icon"></div>
-                            <p>3 Bedroom</p>
-                        </div>
-                         <div class="number_bathrooms">
-                            <div class="bath_icon"></div>
-                            <p>2 Bathroom</p>
-                        </div>
-                    </div>
-					<div class="user"><b>Owner</b>: Betty Holberton</div>
-					<div class="description">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					</div>
-				</article>
-			</section>
-		</div>
-		<footer>
-			<p>Holberton School</p>
-		</footer>
-	</body>
+        <!--CONTAINER-->
+        <div class="container">
+
+            <!--FILTERS-->
+            <section class="filters">
+                <!--LOCATIONS-->
+                <div class="locations">
+                    <h3>States</h3>
+                    <h4>California, Arizona...</h4>
+
+                    <ul class="popover">
+                        <li class="state">
+                            <h2>Arizona:</h2>
+                                <ul>
+                                    <li>Page</li>
+                                    <li>Page2</li>
+                                </ul>
+                        </li>
+
+                        <li class="state">
+                            <h2>California:</h2>
+                            <ul>
+                                <li>San Francisco</li>
+                                <li>Los Angeles</li>
+                            </ul>
+                        </li>
+
+                        <li class="state">
+                            <h2>Enugu:</h2>
+                            <ul>
+                                <li>Abakpa</li>
+                                <li>Emene</li>
+                                <li>Obiagu</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+
+                <!--AMENITIES-->
+                <div class="amenities">
+                    <h3>Amenities</h3>
+                    <h4>Internet, Kitchen...</h4>
+
+                    <ul class="popover">
+                        <li>Internet</li>
+                        <li>TV</li>
+                        <li>Kitchen</li>
+                        <li>Iron</li>
+                        <li>Pool</li>
+                        <li>Hair Dryer</li>
+                    </ul>
+                </div>
+
+                <!--BUTTON-->
+                <button>Search</button>
+            </section>
+
+            <!--PLACES-->
+            <section class="places">
+                <h1>Places</h1>
+
+                <!--ARTICLES-->
+                <ul>
+                    <li>
+                        <article>
+                            <h2>My home</h2>
+
+                            <div class="price_by_night">$80</div>
+
+                            <div class="information">
+                                <div class="max_guest">
+                                    <div class="icon group"></div>
+                                    <p>2 Guests</p>
+                                </div>
+
+                                <div class="number_rooms">
+                                    <div class="icon bed"></div>
+                                    <p>1 Bedroom</p>
+                                </div>
+
+                                <div class="number_bathrooms">
+                                    <div class="icon bath"></div>
+                                    <p>1 Bathroom</p>
+                                </div>
+                            </div>
+
+                            <div class="user"><b>Owner:</b> John Lennon</div>
+
+                            <div class="description">
+                                This is a lovely 1 bedroom and 1 bathroom apartment that can accomodate 2 people. It locates at the center of Shanghai and next to subway line 1. 1 stop to People Square, 2 stops to Bund, 3 stops to Jingan Temple.
+                            </div>
+                        </article>
+                    </li>
+
+                    <li>
+                        <article>
+                            <h2>Tiny house</h2>
+
+                            <div class="price_by_night">$65</div>
+                            
+                            <div class="information">
+                                <div class="max_guest">
+                                    <div class="icon group"></div>
+                                    <p>6 Guests</p>
+                                </div>
+
+                                <div class="number_rooms">
+                                    <div class="icon bed"></div>
+                                    <p>2 Bedrooms</p>
+                                </div>
+
+                                <div class="number_bathrooms">
+                                    <div class="icon bath"></div>
+                                    <p>1 Bathroom</p>
+                                </div>
+                            </div>
+
+                            <div class="user"><b>Owner:</b> Adrienne</div>
+
+                            <div class="description">
+                                Our place is a private, affordable stand-alone guest house centrally located just minutes to French Quarters, downtown, the Fair Grounds (Jazz Fest) and City Park. The guest house is a quaint, 400 square ft. with a full bath, mini kitchen, & living room. The extra hight ceilings make the home feel more spacious. The sofa converts to a bed also. We have a hand made counter area that adds character to the room and a great porch/deck to relax on and have a glass of Merlot.
+                            </div>
+                        </article>
+                    </li>
+
+                    <li>
+                        <article>
+                            <h2>A suite</h2>
+
+                            <div class="price_by_night">$190</div>
+                            
+                            <div class="information">
+                                <div class="max_guest">
+                                    <div class="icon group"></div>
+                                    <p>6 Guests</p>
+                                </div>
+
+                                <div class="number_rooms">
+                                    <div class="icon bed"></div>
+                                    <p>3 Bedrooms</p>
+                                </div>
+
+                                <div class="number_bathrooms">
+                                    <div class="icon bath"></div>
+                                    <p>2 Bathrooms</p>
+                                </div>
+                            </div>
+
+                            <div class="user"><b>Owner:</b> Bill Zuckerberg</div>
+
+                            <div class="description">
+                                Newly renovated spacious 3 bedrooms 2 baths in cozy Gastown style unit with the views of North Shore mountains. Woodward's landmark building situated at the historic heart of Vancouver.
+                            </div>
+                        </article>
+                    </li>
+
+                    <li>
+                        <article>
+                            <h2>BrainSpark</h2>
+
+                            <div class="price_by_night">$7</div>
+
+                            <div class="information">
+                                <div class="max_guest">
+                                    <div class="icon group"></div>
+                                    <p>1 Guest</p>
+                                </div>
+
+                                <div class="number_rooms">
+                                    <div class="icon bed"></div>
+                                    <p>1 Bedroom</p>
+                                </div>
+
+                                <div class="number_bathrooms">
+                                    <div class="icon bath"></div>
+                                    <p>1 Bathroom</p>
+                                </div>
+                            </div>
+
+                            <div class="user"><b>Owner:</b> Ebube</div>
+
+                            <div class="description">
+                                Well ventilated environment located close to the beach. Equipped with ultramodern technology and robots to assist with daily tasks.
+                            </div>
+                        </article>
+                    </li>
+                </ul>
+            </section>
+        </div>
+
+        <!--FOOTER-->
+        <div class="pagefooter">
+            <footer>
+                <p>Best School</p>
+            </footer>
+        </div>
+    </body>
 </html>
